Alterações na lógica do Pedido